--- a/polls/templates/polls/details.html
+++ b/polls/templates/polls/details.html
@@ -5,11 +5,12 @@
     </head>
     <body>
         <h1>{{question.id}}. {{question.question_text}}</h1>  
-        <form action="{%url 'polls:vote' question.id%}" method="POST">
+        <form action="{% url 'polls:vote' question.id %}" method="post">
+          {% csrf_token %}
           {% if error_message %}<p><strong>{{error_message}}</strong></p>{%endif%}
           {% for choice in question.choice_set.all %}
           <input type="radio" name="choice" id="choice{{forloop.counter}}" value="{{choice.id}}"/>
-          <label for="choice{{forloop.counter}}">{{choice.choice_text}}</label>
+          <label for="choice{{forloop.counter}}">{{choice.choice_text}}</label><br/>
           {%endfor%}
           <input type="submit" value="Vote" />
         </form>
